# NierAutomataSplitter

./: NierAutomataAutosplitterWithOptions.asl  README.md
CutsceneLogger/: .gitignore  CMakeLists.txt  LiveSplitSettings.h  LoggingThread.h  MemoryHandler.h  NierAutomataMemoryHandler.h  README.md  main.cpp
CutsceneLogger/cmake/: CMakeLists.txt  generateVS2017.bat
CutsceneLogger/include/: LoggingThread.h  MemoryHandler.h  NierAutomataMemoryHandler.h
CutsceneLogger/src/: main.cpp
